WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186688
Crash under SuspendedPageProxy::~SuspendedPageProxy()
https://bugs.webkit.org/show_bug.cgi?id=186688
Summary
Crash under SuspendedPageProxy::~SuspendedPageProxy()
Chris Dumez
Reported
2018-06-15 13:07:10 PDT
#0 0x10ab90926 in WTF::Ref<WebKit::WebProcessPool, WTF::DumbPtrTraits<WebKit::WebProcessPool> >::operator WebKit::WebProcessPool&() const (WebKit:x86_64+0x67b926) #1 0x10ac31314 in WebKit::SuspendedPageProxy::~SuspendedPageProxy() (WebKit:x86_64+0x71c314) #2 0x10ac313bd in WebKit::SuspendedPageProxy::~SuspendedPageProxy() (WebKit:x86_64+0x71c3bd) #3 0x10b07b6eb in WebKit::WebPageProxy::~WebPageProxy() (WebKit:x86_64+0xb666eb) #4 0x10b4fab83 in -[WKObject dealloc] (WebKit:x86_64+0xfe5b83) #5 0x10b5d19fc in -[WKWebView .cxx_destruct] (WebKit:x86_64+0x10bc9fc) #6 0x10f3e442d in object_cxxDestructFromClass(objc_object*, objc_class*) (libobjc.A.dylib:x86_64+0x1042d) #7 0x10f3dd2b0 in objc_destructInstance (libobjc.A.dylib:x86_64+0x92b0) #8 0x10f3dd243 in object_dispose (libobjc.A.dylib:x86_64+0x9243) #9 0x11162bbc2 in -[NSResponder dealloc] (AppKit:x86_64+0x35bc2) #10 0x11162a597 in -[NSView dealloc] (AppKit:x86_64+0x34597) #11 0x10b5ba4bf in -[WKWebView dealloc] (WebKit:x86_64+0x10a54bf) #12 0x10f3de041 in (anonymous namespace)::AutoreleasePoolPage::pop(void*) (libobjc.A.dylib:x86_64+0xa041) #13 0x10486897a in WTR::TestController::runTest(char const*) TestController.cpp:1286 #14 0x104868f7d in WTR::TestController::runTestingServerLoop() TestController.cpp:1299 #15 0x10485ba0d in WTR::TestController::TestController(int, char const**) TestController.cpp:129 #16 0x10482ab11 in main main.mm:64 #17 0x1155f9014 in start (libdyld.dylib:x86_64+0x1014)
Attachments
Patch
(1.83 KB, patch)
2018-06-15 13:09 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-06-15 13:07:25 PDT
<
rdar://problem/41060769
>
Chris Dumez
Comment 2
2018-06-15 13:09:16 PDT
Created
attachment 342839
[details]
Patch
WebKit Commit Bot
Comment 3
2018-06-17 22:38:38 PDT
Comment on
attachment 342839
[details]
Patch Clearing flags on attachment: 342839 Committed
r232921
: <
https://trac.webkit.org/changeset/232921
>
WebKit Commit Bot
Comment 4
2018-06-17 22:38:40 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug