Crash under SuspendedPageProxy::~SuspendedPageProxy() https://bugs.webkit.org/show_bug.cgi?id=186688 <rdar://problem/41060769>

Reviewed by Darin Adler.

Ref the WebProcessProxy before calling suspendedPageWasDestroyed() on it as this
might cause the WebProcessProxy / WebProcessPool to get destroyed otherwise, and
we would crash trying to call unregisterSuspendedPageProxy() on the WebProcessPool
on the next line.

* UIProcess/SuspendedPageProxy.cpp:
(WebKit::SuspendedPageProxy::~SuspendedPageProxy):


Canonical link: https://commits.webkit.org/202024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232921 268f45cc-cd09-0410-ab3c-d52691b4dbfc